<resources>
    <string name="app_name">Proyecto integrador</string>
    <string name="text_name">Nombre</string>
    <string name="text_matricula">Matrícula</string>
    <string name="text_lastName">Apellido</string>
    <string name="lbl_save">Guardar</string>
    <string name="lbl_addStudent">Agregar estudiante</string>
    <string name="lbl_delete">Eliminar</string>
    <string name="lbl_update">Actualizar</string>
    <string name="title_activity_form_user">FormUser</string>
    <string name="register">Registrate</string>
    <string name="login">Inicia sesión</string>
    <string name="lbl_closeSession">Cerrar sesión</string>
    <string name="formLblUser">Nombre de usuario:</string>
    <string name="formLblPassword">Contraseña:</string>
    <string name="formLblRegister">Regístrate</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_form_pound">FormPound</string>
</resources>
