<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="computomovil.fmat.lalo.integratingproject.FormUser"
    tools:showIn="@layout/activity_form_user">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registro"
        android:textColor="@color/textColor"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/formLblUser"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/textView4"
            android:layout_alignParentLeft="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:id="@+id/txtNewUsername"
            android:inputType="text"
            android:textColor="@color/textColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/formLblPassword"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/textView5"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/txtNewUsername" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:id="@+id/txtNewPassword"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            android:password="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/formLblRegister"
            style="?android:textAppearanceSmall"
            android:textStyle="bold"
            android:layout_below="@+id/txtNewPassword"
            android:layout_marginTop="35dp"
            android:id="@+id/button"
            android:onClick="saveUser"
            android:background="@drawable/button_selecter"
            android:textColor="#fff" />





    </RelativeLayout>





</RelativeLayout>
